framec_tests/language_specific/cpp/v3_mir/positive/forward_trailing_whitespace.frm
@target cpp

system S {
    machine:
        $A => $P {
            e() {
                => $^   
            }
        }
        $P { }
}
