framec_tests/language_specific/cpp/v3_mir/negative/transition_invalid_state_ident.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                -> $1Bad()
            }
        }
}

